# fastapi-base

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_server.py
.github/workflows/: check-on-push.yml
app/: main.py
app/middlewares/: __init__.py
app/routers/: __init__.py
