[tool.poetry]
authors = ["Flynn <wphestiraid@gmail.com>"]
description = "FastAPI base project."
license = "MIT"
name = "fast-api-base"
packages = [{ include = "app" }]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = { extras = ["all"], version = "^0.95.2" }
python = "3.11"
dependency-injector = "^4.41.0"
ruff = "^0.0.275"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
pycln = "^2.1.3"
pyright = "^1.1.310"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
include = '\.pyi?$'
line-length = 120
preview = true
skip-string-normalization = true
target-version = ['py310']

[tool.flake8]
ignore = 'E203'
max-line-length = 120

[tool.pycln]
all = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
