[tool.poetry]
authors = ["Flynn <wphestiraid@gmail.com>"]
description = "FastAPI base project."
license = "MIT"
name = "fast-api-base"
packages = [{include = "app"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dependency-injector = "^4.41.0"
fastapi = {extras = ["all"], version = "^0.100.0"}
python = "^3.11"
sqlalchemy = "^2.0.16"

[tool.poetry.group.dev.dependencies]
black = "~23.7.0"
pre-commit = "^3.3.3"
pyright = "^1.1.318"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.0.280"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
include = '\.pyi?$'
preview = true
skip-string-normalization = true
target-version = ['py311']

[tool.ruff]
ignore = [
  "E501", # line too long, handled by black
  "E711", # Comparison to None should be cond is None
  "E712", # Comparison to True should be cond is True or if cond:
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "PLR0913", # too many arguments to function call
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "UP", # pyupgrade
  "PL", # pylint
]
target-version = "py311"

[tool.pyright]
reportGeneralTypeIssues = false
venv = ".venv"
venvPath = "."
